@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
+  Bugfixes:
+    - Fix error when the optional '--ignore' argument was not specified
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 2023-02-10
